Add /me/profile endpoint
